Fix overlapping of tasks divs & changed taskHead color & some Heights of divs

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ body.hp {
 #taskContainer {
   display: none;
   flex-direction: column;
-  height: 100vh;
+  height: auto;
   margin-top: 20px;
 }
 
@@ -528,7 +528,7 @@ a {
 }
 
 #toDo {
-  height: 60px;
+  height: 100%;
   background: #6cb9e5;
   border-radius: 9px;
   box-shadow: 5px 5px 5px grey;
@@ -546,6 +546,7 @@ a {
   margin: 10px 0px 0px 0px;
   font-family: "Unbounded", sans-serif;
   font-size: 16px;
+  color: #eaeaea;
 }
 #ps-des {
   margin: 5px 0px 5px 0px;
